styles/slot-availability.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&family=Inter:wght@400;500;600&display=swap');

:root {
    --color-primary: #7380ec;
    --color-danger: #ff7782;
    --color-success: #41f1b6;
    --color-warning: #ffbb55;
    --color-white: #fff;
    --color-info-dark: #7d8da1;
    --color-info-light: #dce1eb;
    --color-dark: #363949;
    --color-light: rgba(132, 139, 200, 0.18);
    --color-primary-variant: #111e88;
    --color-dark-variant: #677483;
    --color-background: #0F172A;

    --card-border-radius: 2rem;
    --border-radius-1: 0.4rem;
    --border-radius-2: 0.8rem;
    --border-radius-3: 1.2rem;

    --card-padding: 1.8rem;
    --padding-1: 1.2rem;

    --box-shadow: 0 2rem 3rem var(--color-light);
}

* {
    margin: 0;
    padding: 0;
    outline: 0;
    appearance: none;
    border: 0;
    text-decoration: none;
    list-style: none;
    box-sizing: border-box;
}

html {
    font-size: 14px
}

body {
    width: 100vw;
    height: 100vh;
    font-family: poppins, sans-serif;
    background-color: var(--color-background);
    user-select: none;
    overflow-x: hidden;
    color: var(--color-white);
}

.container{
    width: 100%;
    margin: 0 auto;
}

a{
    color: var(--color-white);
}

img {
    display: block;
    width: 100%;
}

h1{
    font-weight: 800;
    font-size: 1.8rem;
    color: var(--color-primary);
}

h2{
    font-size: 1.4rem;
}

h3{
    font-size: 0.87rem;
}

h4{
    font-size: 0.8rem;
}

h5{
    font-size: 0.77rem;
}

small{
    font-size: 0.75rem;
}

.profile-photo{
    width: 2.8rem;
    height: 2.8rem;
    border-radius: 50%;
    overflow: hidden;
}

.text-muted{
    color: var(--color-info-dark);
}

p{
    color: var(--color-white)
}

b{
    color: var(--color-primary)
}

.primary{
    color: var(--color-primary)
}

.danger {
    color: var(--color-danger);
    background: rgba(207, 89, 30, 0.757);
    border-radius: 10px;
    padding: 2px;
}

.success {
    color: var(--color-success);
    background: rgba(9, 127, 26, 0.66);
    border-radius: 10px;
    padding: 2px;
}

.warning {
    color: var(--color-warning)
}

aside{
    height: 100vh;
    background: var(--color-light);
    width: 14rem;
    position: fixed;
}

aside .top{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-top: 2.4rem;
    margin-left: 0.8rem;
}

aside .logo img{
    width: 8rem;
    height: 2rem;
    transform: translateX(15px);
}

aside .logo{
    display: flex;
    gap: 0.8rem;
    transition: all 0.3s ease;
}

aside .logo:hover{
    transform: scale(1.1);
}

aside .close{
    display: none;
}

aside .sidebar {
    display: flex;
    flex-direction: column;
    height: 86vh;
    position: relative;
    top: 3rem;
}

aside h3{
    font-weight: 500;
}

aside .sidebar a{
    display: flex;
    color: var(--color-info-light);
    margin-left: 2rem;
    gap: 1rem;
    align-items: center;
    position: relative;
    height: 3.7rem;
    transition: all 0.3s ease;
}


aside .sidebar a span{
    font-size: 1.6rem;
    transition: all 0.3s ease;
}

aside .sidebar a.active{
    background-color: var(--color-dark);
    color: var(--color-primary);
    margin-left: 0;
}

aside .sidebar a.active:before{
    content: '';
    width: 6px;
    height: 100%;
    background: var(--color-primary);
}

aside .sidebar a.active span{
    color: var(--color-primary);
    margin-left: calc(1rem - 3px);
}

aside .sidebar a:hover{
   color: var(--color-primary);
}

aside .sidebar a:hover span{
    margin-left: 1rem;
}

main {
    height: 100vh;
    margin: 0 2rem 2rem 17rem;
    padding: 28px 10px 10px 10px;
}

.availability-section {
    margin-bottom: 2rem;
    background-color: var(--color-dark);
    padding: 1.5rem;
    border-radius: 20px;
}

.date-container {
    display: flex;
    margin-top: 1.5rem;
    gap: 0.35rem;
}

.date-container button {
    padding: 0.55rem;
    border: 2px solid #ccc;
    border-radius: 4px;
    font-family: inherit;
}

input[type="date"] {
  margin-right: 1.25rem;
  font-size: 1rem;
  padding: 0.5rem;
  border: 2px solid #ccc;
  border-radius: 8px;
  font-family: inherit;
}

.reservation-section {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    padding: 2.5rem 2.5rem 1.25rem 2.5rem;
    border-radius: 20px;
    background-color: var(--color-dark);
}

.search-table-outer {
    display: flex;
    border:2px solid var(--color-primary);
    overflow-x: scroll; 
    overflow-y: scroll; 
    scrollbar-width: none;
    min-height: 50vh;
    max-height: 50vh;
}

.search-table-outer::-webkit-scrollbar {
    display: none;
}

.search-table{
    table-layout: fixed; 
    height: 100px;
}

.search-table, td, th{
    border-collapse: collapse; 
    border: 1px solid #777;
}

td {
    color: var(--color-dark);
    background-color: #dde7ed;
}

th {
    padding: 10px 7px; 
    font-size: 15px; 
    color:#444; 
    background:#66C2E0;
}

.room-col { 
    min-width: 200px !important;
}

.reservation-availability {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    padding: 10px;
    border-radius: 8px;
    background-color: var(--color-info-light);
}

.reservation-availability p {
    color: black;
}

.sticky-col {
    position: sticky;
    min-width: 100px;
    top: 0;
}

.room-data {
    text-align: center;
    padding: 5px 10px; 
    height: 35px;
}

